crates/aquascope/tests/snapshots/boundaries__add_big_strings@closure_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: add_big_strings@closure_1.test
---
- location:
    line: 2
    column: 9
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 2
    column: 33
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 3
    column: 13
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 4
    column: 12
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 4
    column: 28
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 5
    column: 15
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    loan_refined:
      Write:
        key: 0
    loan_drop_refined: 0
- location:
    line: 5
    column: 22
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
