crates/aquascope/tests/snapshots/boundaries__add_ref@add_ref.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: add_ref@add_ref.test
---
- location:
    line: 2
    column: 11
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 3
    column: 3
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
  expecting_flow:
    is_violation: false
    flow_context:
      start:
        line: 3
        column: 2
      end:
        line: 3
        column: 12
      filename:
        private_use_as_methods_instead: 0
    kind: Ok
- location:
    line: 3
    column: 9
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
  expecting_flow:
    is_violation: true
    flow_context:
      start:
        line: 3
        column: 2
      end:
        line: 3
        column: 12
      filename:
        private_use_as_methods_instead: 0
    kind: LocalOutlivesUniversal
