crates/aquascope/tests/snapshots/boundaries__arr@array.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: arr@array.test
---
- location:
    line: 2
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
