crates/aquascope/tests/snapshots/boundaries__bar@coerced_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: bar@coerced_0.test
---
- location: 59
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: true
- location: 91
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: false
- location: 103
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: false
- location: 122
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: false

