crates/aquascope/tests/snapshots/boundaries__bar@moved_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: bar@moved_0.test
---
- location:
    line: 2
    column: 15
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: true
  data:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 3
    column: 14
  expected:
    read: true
    write: false
    drop: true
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 4
    column: 7
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
- location:
    line: 5
    column: 3
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: false
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    path_moved: 0
