crates/aquascope/tests/snapshots/boundaries__dangling_pointer@dangling_pointer.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: dangling_pointer@dangling_pointer.test
---
[]
