crates/aquascope/tests/snapshots/boundaries__declared_mut@box.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: declared_mut@box.test
---
- location: 108
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: true

