crates/aquascope/tests/snapshots/boundaries__declared_ro@box.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: declared_ro@box.test
---
- location: 45
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: true

