crates/aquascope/tests/snapshots/boundaries__get_first_specified@type-driven-flows.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: get_first_specified@type-driven-flows.test
---
- location:
    line: 21
    column: 15
  expected:
    read: true
    write: false
    drop: false
  actual:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: false
  expecting_flow:
    is_violation: false
    flow_context:
      start:
        line: 21
        column: 2
      end:
        line: 21
        column: 20
      filename:
        private: 0
    kind: Ok
- location:
    line: 22
    column: 2
  expected:
    read: true
    write: false
    drop: false
  actual:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: false
  expecting_flow:
    is_violation: false
    flow_context:
      start:
        line: 22
        column: 2
      end:
        line: 22
        column: 7
      filename:
        private: 0
    kind: Ok

