crates/aquascope/tests/snapshots/boundaries__main@assignop_path_resolution.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: main@assignop_path_resolution.test
---
- location:
    line: 6
    column: 11
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: true
    drop: true
  data:
    type_droppable: true
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 7
    column: 10
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 8
    column: 2
  expected:
    read: true
    write: true
    drop: false
  actual:
    read: true
    write: true
    drop: true
  data:
    type_droppable: true
    type_writeable: true
    type_copyable: true
    is_live: false
    path_uninitialized: false
- location:
    line: 8
    column: 7
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: true
    type_writeable: true
    type_copyable: true
    is_live: true
    path_uninitialized: false
    loan_refined:
      Write:
        key: 0
    loan_drop_refined: 0
- location:
    line: 8
    column: 11
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
- location:
    line: 8
    column: 15
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: false
  data:
    type_droppable: false
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
